test/conformance/chainsaw/filter/exclude/user/no-wildcard/pass/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-pod
spec:
  background: false
  rules:
  - name: block-pod
    match:
      any:
      - resources:
          kinds:
          - Pod
    exclude:
      any:
      - subjects:
        - kind: User
          name: kubernetes-admin
    validate:
      failureAction: Enforce
      deny: {}
